--- a/style.css
+++ b/style.css
@@ -3,7 +3,9 @@
 body {
   background-color: orange;
   background-image: url('https://static.wikia.nocookie.net/fortnite/images/2/2a/Legendary_-_Rarity_-_Fortnite.png');
-  background-size: cover;
+  background-size: 800px;
+  width: 800px;
+  min-width: 800px;
 }
 
 div {
