--- a/style.css
+++ b/style.css
@@ -1,12 +1,15 @@
 @import url(//fonts.googleapis.com/css?family=Luckiest+Guy);
 
+html, body {
+  overflow: hidden;
+}
+
 body {
   background-color: orange;
   background-image: url('https://static.wikia.nocookie.net/fortnite/images/2/2a/Legendary_-_Rarity_-_Fortnite.png');
-  background-size: 800px;
-  width: 800px;
-  min-width: 800px;
-  height: 500px;
+  /* background-size: 800px; */
+  /* width: 100%; */
+  /* position: relative; */
 }
 
 div {
