--- a/styles/main.css
+++ b/styles/main.css
@@ -32,6 +32,11 @@ img {
   /*animation: slideshow 120s linear infinite; */
 }
 
+.weapon-image{
+  max-width:100%;
+  max-height:100%;
+}
+
 .visual-container {
   background-color: #031529;
   position: absolute;
