--- a/styles/main.css
+++ b/styles/main.css
@@ -147,3 +147,17 @@ img {
   /* animation: enemySpawn 1s linear 0s 1; */
 
 }
+
+.floating-damage-indicator{
+  font-family: 'Luckiest Guy', sans-serif;
+  color: yellow;
+  font-size: 40px;
+  /* background-color: white; */
+  position: absolute;
+  /* height: 150px; */
+  /* width: 150px; */
+  z-index: 100;
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: black;
+  transition: all 2s ease;
+}
