--- a/styles/main.css
+++ b/styles/main.css
@@ -142,10 +142,22 @@ img {
   top: 10px;
   z-index: 10;
   left: 240px;
+  /* transition: all 1s ease; */
+
   /* filter: opacity(1) drop-shadow(0 0 0 blue); */
   
   /* animation: enemySpawn 1s linear 0s 1; */
 
+}
+
+.enemy-avatar-dead{
+  position: absolute;
+  height: 150px;
+  top: 10px;
+  z-index: 10;
+  left: 240px;
+  filter: opacity(0) drop-shadow(0 0 0 blue);
+  transition: all 2s ease;
 }
 
 .floating-damage-indicator{
