--- a/styles/main.css
+++ b/styles/main.css
@@ -33,8 +33,8 @@ img {
 }
 
 .weapon-image{
-  max-width:100%;
-  max-height:100%;
+  width:100%;
+  height:100%;
 }
 
 .visual-container {
@@ -56,7 +56,7 @@ img {
 
   position: absolute;
   left: 5px;
-  top: 295px;
+  top: 320px;
   height: 400px;
   width: 400px;
   border-radius: 25px;
@@ -118,17 +118,13 @@ img {
 }
 
 .resource-item-ammo {
-  background-color: rgba(169, 185, 72, 0.9);
-  position: relative;
-  display: float;
-  width: 138px;
-  height: 54px;
-  top: 192px;
-  left: 15px;
-  font-size: 22px;
+  position: absolute;
+  bottom: 2px;
+  right: 2px;
+  font-size: 16px;
   text-align: center;
   color: white;
-  vertical-align: center;
+  vertical-align: bottom;
   text-shadow: 2px 2px 6px #000000;
   /*font-family: Arial, Helvetica, sans-serif;*/
   font-family: 'Luckiest Guy', sans-serif;
@@ -172,4 +168,25 @@ img {
   -webkit-text-stroke-width: 2px;
   -webkit-text-stroke-color: black;
   transition: all 2s ease;
+}
+
+.weapon-container{
+  /* background-image: url(https://static.wikia.nocookie.net/fortnite/images/b/bc/Rare_-_Rarity_-_Fortnite.png); */
+  background-image: url(  https://static.wikia.nocookie.net/fortnite/images/7/7f/Common_-_Rarity_Background_-_Fortnite.png);
+  background-color: rgba(169, 185, 72, 0.9);
+  background-size: cover;
+  position: absolute;
+  display: float;
+  width: 70px;
+  height: 70px;
+  top: 240px;
+  left: 20px;
+  font-size: 22px;
+  text-align: center;
+  color: white;
+  vertical-align: center;
+  text-shadow: 2px 2px 6px #000000;
+  font-family: 'Luckiest Guy', sans-serif;
+  overflow: hidden;
+  /* border-radius: 2px; */
 }
