--- a/styles/main.css
+++ b/styles/main.css
@@ -13,6 +13,15 @@ body {
   /* position: relative; */
 }
 
+#container{
+  margin: auto;
+  /* max-width: 50%; */
+  /* min-width: 90%; */
+  width: 400px;
+  /* background-color: red; */
+  padding: 10px;
+}
+
 div {
   /*user-select: none;*/
   user-select: none;
@@ -27,8 +36,9 @@ img {
 .map {
   left: 0px;
   position: relative;
-  width: 961px;
-  transition: all 5s ease;
+  /* width: 961px; */
+  width: 500%;
+  transition: left 5s ease;
   /*animation: slideshow 120s linear infinite; */
 }
 
@@ -39,26 +49,79 @@ img {
 
 .visual-container {
   background-color: #031529;
-  position: absolute;
-  left: 5px;
-  top: 30px;
+  position: relative;
+  /* left: 5px; */
+  /* top: 20px; */
   height: 145px;
-  width: 400px;
+  /* width: 400px; */
+  width: 100%;
   border-radius: 5px;
   z-index: 5;
   overflow: hidden;
 
 }
 
+#player-life-container{
+
+  /* background-color: #000000; */
+  position: relative;
+  /* height: 50px; */
+  width: auto;
+  /* width: 420px; */
+
+}
+
+.resource-bar-shield {
+  margin: 3px;
+
+  position: relative;
+  
+  width: 100%;
+  height: 16px;
+  left: 8px;
+  background-color: rgba(0, 0, 0, 0.5);
+  transform: skewX(-20deg);
+}
+
+.resource-bar-shield-fill {
+  background-color: rgba(3, 167, 220, 0.9);
+  transition: all 0.5s ease;
+}
+
+.resource-bar-health {
+  margin: 3px;
+
+  width: 100%;
+
+  position: relative;
+  height: 28px;
+  /* top: 200px; */
+  /* left: 12px; */
+  background-color: rgba(0, 0, 0, 0.5);
+  transform: skewX(-20deg);
+}
+
+.resource-bar-health-fill {
+  background-color: rgba(100, 215, 42, 0.9);
+  transition: all 0.5s ease;
+
+}
+
+.items-container{
+  position: relative;
+  width: 100%;
+  padding: 200px;
+}
+
 .puzzle-container {
   background-image: url('https://static.wikia.nocookie.net/fortnite/images/4/47/Epic_-_Rarity_-_Fortnite.png');
   background-size: cover;
 
-  position: absolute;
+  position: relative;
   left: 5px;
-  top: 310px;
+  /* top: 310px; */
   height: 400px;
-  width: 400px;
+  /* width: 400px; */
   border-radius: 25px;
   z-index: 10;
   overflow: hidden;
@@ -76,47 +139,6 @@ img {
   /*border: 1px solid;*/
 }
 
-.selection-outline {
-  position: absolute;
-  height: 60px;
-  width: 60px;
-  z-index: 50;
-  border-radius: 50px;
-  border: 5px solid;
-  pointer-events: none;
-}
-
-.resource-bar-shield {
-  width: 380px;
-  height: 16px;
-  top: 154px;
-  left: 20px;
-  background-color: rgba(0, 0, 0, 0.5);
-  transform: skewX(-20deg);
-}
-
-.resource-bar-shield-fill {
-  background-color: rgba(3, 167, 220, 0.9);
-  transition: all 0.5s ease;
-
-}
-
-.resource-bar-health {
-  width: 380px;
-  height: 28px;
-  top: 200px;
-  left: 12px;
-  background-color: rgba(0, 0, 0, 0.5);
-  transform: skewX(-20deg);
-
-}
-
-.resource-bar-health-fill {
-  background-color: rgba(100, 215, 42, 0.9);
-  transition: all 0.5s ease;
-
-}
-
 .resource-item-ammo {
   position: absolute;
   bottom: 2px;
@@ -129,7 +151,7 @@ img {
   /*font-family: Arial, Helvetica, sans-serif;*/
   font-family: 'Luckiest Guy', sans-serif;
   overflow: hidden;
-  border-radius: 2px;
+  /* border-radius: 2px; */
 }
 
 .enemy-avatar {
@@ -175,12 +197,12 @@ img {
   background-image: url(  https://static.wikia.nocookie.net/fortnite/images/7/7f/Common_-_Rarity_Background_-_Fortnite.png);
   background-color: rgba(169, 185, 72, 0.9);
   background-size: cover;
-  position: absolute;
+  position: relative;
   display: float;
   width: 70px;
   height: 70px;
-  top: 235px;
-  left: 20px;
+  /* top: 235px; */
+  /* left: 20px; */
   font-size: 22px;
   text-align: center;
   color: white;
@@ -188,5 +210,6 @@ img {
   text-shadow: 2px 2px 6px #000000;
   font-family: 'Luckiest Guy', sans-serif;
   overflow: hidden;
+  margin: 5px;
   /* border-radius: 2px; */
 }
