--- a/styles/animations.css
+++ b/styles/animations.css
@@ -8,7 +8,16 @@
   
     }
   }
-  
+
+@keyframes animatedBackground {
+  from {
+    background-position: 0% 0%;
+  }
+  to {
+    background-position: 0% 100%;
+  }
+}
+
   @keyframes slideshow {
     0% {
       left: 50%;
