--- a/styles/main.css
+++ b/styles/main.css
@@ -42,6 +42,36 @@ img {
   pointer-events: none;
 }
 
+#storm-tracker-container{
+  background-color: cyan;  
+  width: 100%;
+  height: 5vmax;
+}
+
+.storm-tracker-icon{
+  position: absolute;
+  /* background-image: url('/images/running-man.png'); */
+  /* background-color: white; */
+  /* left: 25%; */
+  /* height: 90%; */
+  /* top: 1.5vmax; */
+  height: 4vmax;
+  z-index: 10;
+  transition: left 5s ease;
+
+}
+
+.storm-tracker-screen{
+  background-color: purple;
+  background-image: url('/images/storm-background.gif');
+  position: absolute;
+  height: 5vmax;
+  width: 100%;
+  left: 0;
+  animation: animatedBackground 10s linear infinite reverse;
+  transition: all 5s ease;
+}
+
 .map {
   /* left: 0px; */
   /* display: block; */
