--- a/styles/main.css
+++ b/styles/main.css
@@ -22,7 +22,7 @@ body {
   /* width: 400px; */
   /* background-color: red; */
   padding: 1vmax;
-
+  padding-top: 0;
   /* margin: auto;
   position: absolute;
   top: 50%;
@@ -44,8 +44,12 @@ img {
 
 #storm-tracker-container{
   background-color: cyan;  
-  width: 100%;
-  height: 5vmax;
+  /* width: 100%; */
+  height: 4vmax;
+  position: relative;
+  display: block;
+  border-radius: 1vw;
+  overflow: hidden;
 }
 
 .storm-tracker-icon{
@@ -66,7 +70,7 @@ img {
   background-image: url('/images/storm-background.gif');
   position: absolute;
   height: 5vmax;
-  width: 100%;
+  width: 17%;
   left: 0;
   animation: animatedBackground 10s linear infinite reverse;
   transition: all 5s ease;
@@ -121,9 +125,9 @@ img {
 
   position: relative;
   
-  width: 100%;
+  width: 95%;
   height: 30%;
-  left: 8px;
+  left: 2%;
   background-color: rgba(0, 0, 0, 0.5);
   transform: skewX(-20deg);
 }
@@ -136,10 +140,11 @@ img {
 .resource-bar-health {
   margin: 3px;
 
-  width: 100%;
-
+  width: 95%;
+  left: 0.5%;
   position: relative;
   height: 70%;
+  left: 0%;
   /* top: 200px; */
   /* left: 12px; */
   background-color: rgba(0, 0, 0, 0.5);
@@ -149,7 +154,6 @@ img {
 .resource-bar-health-fill {
   background-color: rgba(100, 215, 42, 0.9);
   transition: all 0.5s ease;
-
 }
 
 .items-container{
@@ -168,8 +172,6 @@ img {
   /* width: 100%; */
   /* height: 60vh; */
   /* object-fit: contain; */
-
-
   border-radius: 1vw;
   z-index: 10;
   overflow: hidden;
