--- a/styles/animations.css
+++ b/styles/animations.css
@@ -10,10 +10,10 @@
   }
 
 @keyframes animatedBackground {
-  from {
+  0% {
     background-position: 0% 0%;
   }
-  to {
+  100% {
     background-position: 0% 100%;
   }
 }
