--- a/styles/main.css
+++ b/styles/main.css
@@ -86,7 +86,7 @@ img {
   position: relative;
   width: auto;
   text-align: center;
-  height: 2vmax;
+  height: 3vmax;
 }
 
 .match-info-section{
@@ -94,13 +94,15 @@ img {
   height: 100%;
   color: white;
   text-align: center;
+  font-size: 2.7vmax;
   text-shadow: 2px 2px 6px #000000;
   display: inline-block;
 }
 
 .storm-state-icon{
-  background-image: url(/images/storm_holding_icon.webp);
-  background-size: contain;
+  /* background-image: url(/images/storm_holding_icon.webp); */
+  /* background-size: contain; */
+  height: 80%;
 }
 
 #player-life-container{
