--- a/styles/main.css
+++ b/styles/main.css
@@ -150,7 +150,27 @@ img {
 .items-container{
   position: relative;
   width: 100%;
-  height: 10vmax;
+  text-align: center;
+  margin: auto;
+  /* height: 10vmin; */
+  display: inline-block;
+}
+
+.inventory-slot{
+  position: relative;
+  border: 0.5vmin solid rgba(255, 255, 255, 0.3);
+  display: float;
+  width: 20vmin;
+  height: 20vmin;
+  font-size: 22px;
+  text-align: center;
+  color: white;
+  vertical-align: center;
+  text-shadow: 2px 2px 6px #000000;
+  overflow: hidden;
+  margin: 1vmin;
+  display: inline-block;
+
 }
 
 .puzzle-container {
@@ -227,16 +247,18 @@ img {
   background-image: url(  https://static.wikia.nocookie.net/fortnite/images/7/7f/Common_-_Rarity_Background_-_Fortnite.png);
   background-color: rgba(169, 185, 72, 0.9);
   background-size: cover;
-  position: relative;
-  display: float;
-  width: 10vmax;
-  height: 10vmax;
+  /* position: relative; */
+  /* display: float; */
+  /* width: 10vmin; */
+  /* height: 10vmin; */
   font-size: 22px;
   text-align: center;
   color: white;
-  vertical-align: center;
-  text-shadow: 2px 2px 6px #000000;
-  font-family: 'Luckiest Guy', sans-serif;
-  overflow: hidden;
-  margin: 5px;
+  /* vertical-align: center; */
+  /* text-shadow: 2px 2px 6px #000000; */
+  /* font-family: 'Luckiest Guy', sans-serif; */
+  /* overflow: hidden; */
+  /* margin: 5px; */
+  /* display: inline-block; */
+
 }
