--- a/styles/main.css
+++ b/styles/main.css
@@ -261,3 +261,15 @@ img {
   /* display: inline-block; */
 
 }
+
+.draggable-item{
+  position: absolute;
+  height: 20vmin;
+  width: 20vmin;
+  background-color: blue;
+  border-radius: 50%;
+  z-index: 20;
+  background-size: 100%;
+  overflow: hidden;
+  /* transition: all 0.09s linear; */
+}
