--- a/styles/main.css
+++ b/styles/main.css
@@ -73,8 +73,11 @@ img {
 }
 
 .weapon-image-small{
-  width:75%;
-  height:75%;
+  position: absolute;
+  top: 10%;
+  left: 10%;
+  width: 80%;
+  height: 80%;
 }
 
 .visual-container {
