new game version

--- a/styles/main.css
+++ b/styles/main.css
@@ -19,6 +19,7 @@ body {
 }
 
 div {
+  /*user-select: none;*/
   user-select: none;
   -webkit-tap-highlight-color: transparent;
 }
@@ -72,14 +73,6 @@ img {
   height:100%;
 }
 
-.draggable-item-image{
-  position: absolute;
-  top: 10%;
-  left: 10%;
-  width: 80%;
-  height: 80%;
-}
-
 .visual-container {
   background-color: #031529;
   position: relative;
@@ -124,6 +117,7 @@ img {
   margin: 3px;
 
   position: relative;
+  border-radius: 5px;
   
   width: 95%;
   height: 30%;
@@ -133,12 +127,13 @@ img {
 }
 
 .resource-bar-shield-fill {
-  background-color: rgba(3, 167, 220, 0.9);
+  background-color: #03a7dce6;
   transition: all 0.5s ease;
 }
 
 .resource-bar-health {
   margin: 3px;
+  border-radius: 5px;
 
   width: 95%;
   left: 0.5%;
@@ -150,7 +145,9 @@ img {
 }
 
 .resource-bar-health-fill {
-  background-color: rgba(100, 215, 42, 0.9);
+  border-radius: 5px;
+
+  background-color: #64d72ae6;
   transition: all 0.5s ease;
 }
 
@@ -162,6 +159,7 @@ img {
   /* height: 10vmin; */
   display: inline-block;
 }
+
 
 .inventory-slot{
   position: relative;
@@ -200,6 +198,13 @@ img {
 
   margin: auto;
 
+  outline: 1px solid rgb(0, 0, 0);
+  transition: outline 0.2s ease;
+
+}
+
+.locked {
+  outline: 5px solid rgb(204, 0, 0);
 }
 
 
@@ -211,6 +216,15 @@ img {
   z-index: -50;
   max-width: 14%;
 }
+
+.select-tile img {
+  width: 100%;
+  height: 100%;
+  display: block;
+  border-radius: 50%;
+  /*background-color: orange;*/
+}
+
 
 .resource-item-ammo {
   position: absolute;
@@ -268,16 +282,4 @@ img {
   /* margin: 5px; */
   /* display: inline-block; */
 
-}
-
-.draggable-item{
-  position: absolute;
-  height: 20vmin;
-  width: 20vmin;
-  background-color: blue;
-  border-radius: 50%;
-  z-index: 20;
-  background-size: 100%;
-  overflow: hidden;
-  /* transition: all 0.09s linear; */
 }
